# v8-jsi

./: ReactNative.V8Jsi.Windows.nuspec  compile.ps1
src/: BUILD.gn  V8JsiRuntime.cpp  V8JsiRuntime_impl.h  V8Platform.h  testmain.cpp
src/napi/: env-inl.h  env.cc  env.h  js_engine_api.h  js_engine_api_v8.cpp  js_native_api_v8.cc  js_native_api_v8.h  js_native_api_v8_internals.h  js_native_ext_api_v8.cpp  js_native_test_api.h  js_native_test_api_v8.cpp  memory_tracker-inl.h  memory_tracker.h  node.cc  node_errors.cc  node_internals.h  node_shim.cpp  node_shim.h  util-inl.h  util.cc  v8_api.cpp  v8_api.h
src/napi/test/: js_assert.cpp  js_assert.h  js_assert_module.cpp  js_assert_module.h  napi_test_function.cpp  napi_test_properties.cpp  napitest.cpp  napitest.h  napitest_v8.cpp  napitestbase.cpp  napitestbase.h  test_array.cpp  test_assert.cpp  test_bigint.cpp  test_constructor.cpp  test_conversions.cpp  test_dataview.cpp  test_date.cpp  test_error.cpp  test_exception.cpp  test_ext.cpp  test_function.cpp  test_general.cpp  test_handle_scope.cpp  test_instance_data.cpp  test_new_target.cpp  test_number.cpp  test_object.cpp  test_promise.cpp  test_properties.cpp  test_reference.cpp  test_reference_double_free.cpp  test_string.cpp  test_symbol.cpp  test_typedarray.cpp  v8napitest.cpp
src/napi/test/js-native-api/test_properties/: test_properties.c.h
src/napi/test/lib/: assert_js.cpp  assertion_error_js.cpp  common_js.cpp  errors_js.cpp  inspect_js.cpp  modules.h  validators_js.cpp
src/public/: NapiApi.cpp  NapiApi.h  NapiJsiRuntime.cpp  NapiJsiRuntime.h  V8JsiRuntime.h  compat.h  js_engine_api.h  js_native_ext_api.h
